# RHaPSODIES

./: .gitignore  README  README.md  compile-deps.sh  compile.sh  ebrowse.sh  update-svn.sh
RHaPSODIES/: CMakeLists.txt
RHaPSODIES/shaders/: V2dDiagram_frag.glsl  V2dDiagram_vert.glsl  VtrHaloDecorator_frag.glsl  difference_score.comp  generate_transforms.comp  indexed_viewport.geom  prepare_reduction_textures.comp  reduction.comp  reduction_header0.part  reduction_header0_difference.part  reduction_header0_intersection.part  reduction_header0_union.part  reduction_header1.part  reduction_header1_difference.part  reduction_header1_intersection.part  reduction_header1_union.part  reduction_header2.part  reduction_header2_difference.part  reduction_header2_intersection.part  reduction_header2_union.part  reduction_x.comp  reduction_y.comp  shaded_colored.frag  solid_colored.frag  solid_green.frag  swarmupdate.comp  textured.frag  textured_uint.frag  textured_uint8.frag  textured_uint_diff.frag  update_gbest.comp  update_scores.comp  update_swarm.comp  vpos.vert  vpos_indexedtransform.vert  vpos_uv.vert  vpos_vnorm_indexedtransform.vert
RHaPSODIES/src/: CameraFrameFilter.cpp  CameraFrameFilter.hpp  CameraFramePlayer.cpp  CameraFramePlayer.hpp  DebugView.hpp  DebugViewConsole.cpp  DebugViewConsole.hpp  HandGeometry.hpp  HandModel.cpp  HandModel.hpp  HandRenderer.cpp  HandRenderer.hpp  HandTracker.cpp  HandTracker.hpp  HandTrackingNode.cpp  RHaPSODIES.cpp  RHaPSODIES.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  _SourceFiles.cmake
RHaPSODIES/src/PSO/: Particle.cpp  Particle.hpp  ParticleSwarm.cpp  ParticleSwarm.hpp  _SourceFiles.cmake
RHaPSODIES/src/SkinClassifiers/: SkinClassifierDhawale.hpp  SkinClassifierLogOpponentYIQ.cpp  SkinClassifierLogOpponentYIQ.hpp  SkinClassifierRedMatter0.hpp  SkinClassifierRedMatter3.hpp  SkinClassifierRedMatter4.hpp  SkinClassifierRedMatter5.cpp  _SourceFiles.cmake
RHaPSODaemon/: CMakeLists.txt
RHaPSODaemon/src/: RHaPSODaemon.cpp  RHaPSODaemon.hpp  _SourceFiles.cmake  main.cpp
RHaPSODemo/: .gitignore  CMakeLists.txt
RHaPSODemo/configfiles/: display_desktop.ini  display_holobench.ini  interaction_desktop.ini  rhapsodemo.ini  rhapsodemo_desktop.ini  rhapsodemo_holobench.ini  rhapsodies.ini  vista.ini
RHaPSODemo/configfiles/interaction/: handmodel_testing_midi.xml  handtracker.xml  keycontrol.xml  spacenavigator_navigation.xml
RHaPSODemo/resources/shaders/: VtrShadowDecorator_frag.glsl  depthtexture.frag  difference_score.comp  generate_transforms.comp  indexed_viewport.geom  reduction.comp  reduction_x.comp  reduction_y.comp  shaded_colored.frag  solid_blue.frag  solid_green.frag  textured.frag  textured.fs  textured.vert  textured_uint.frag  textured_uint8.frag  textured_uint_diff.frag  vpos.vert  vpos_indexedtransform.vert  vpos_only.fs  vpos_only.vert  vpos_only.vs  vpos_vnorm_indexedtransform.vert
RHaPSODemo/src/: CameraFrameColorHandler.cpp  CameraFrameColorHandler.hpp  CameraFrameDepthHandler.cpp  CameraFrameDepthHandler.hpp  CameraFrameHandler.cpp  CameraFrameHandler.hpp  CameraFramePlayer.cpp  CameraFramePlayer.hpp  CameraFrameRecorder.cpp  CameraFrameRecorder.hpp  ColorFrameHandler.cpp  ColorFrameHandler.hpp  DebugView.hpp  DebugViewTextOverlay.cpp  DebugViewTextOverlay.hpp  DepthFrameHandler.cpp  DepthFrameHandler.hpp  DepthHistogramHandler.cpp  DepthHistogramHandler.hpp  DrawMutexHandler.cpp  DrawMutexHandler.hpp  HandGeometry.cpp  HandGeometry.hpp  HandModel.cpp  HandModel.hpp  HandModelRep.cpp  HandModelRep.hpp  HandModelView.cpp  HandModelView.hpp  HandRenderDraw.hpp  HandRenderer.cpp  HandRenderer.hpp  HandTracker.cpp  HandTracker.hpp  HandTrackingNode.cpp  HandTrackingNode.hpp  HistogramUpdater.cpp  HistogramUpdater.hpp  ImageDraw.cpp  ImageDraw.hpp  (+14 more)
RHaPSODemo/src/DataFlowNet/: HandModelTestingNode.cpp  HandModelTestingNode.hpp  HandTrackingNode.cpp  HandTrackingNode.hpp  NodeHelpers.hpp  _SourceFiles.cmake
RHaPSODemo/src/GLDraw/: DepthTextureGLDraw.cpp  DepthTextureGLDraw.hpp  HandRenderDraw.cpp  HandRenderDraw.hpp  (+7 more)
(+16 files in other folders)
